Risk - Yura Mamyrin (yura@yura.net)

CURRENT VERSION:

	Risk Game:	1.1.1.7
	 * Save:	8
	 * Network:	12

	Android		63
	Flash GUI:	2
	Swing GUI:	2
	Simple GUI:	2
	Increment1GUI:	2
	CommandLine:	2

1.1.1.7

	Fix for 'Top Rated' being broken on PC Domination.
	Swedish translation update by sa-w w waara09
	Fix for hi-res mouse wheel getting UI stuck

	Android 63 Sending a message from inside game added

1.1.1.6

	OS X java 1.7 maps dir missing deadlock fix
	OS X java 1.7 open html help in browser fix
	OS X .app launches on latest version of java
	pt_PT update by Pipanni
	SwingGUI sends more info on crash and feedback
	Greek added
	Support for windows hi-dpi screens added
	Support for online play with any map added
	MapEditor: can select what Islands to delete.
	Resign button added in menu of FlashGUI for online play

	Android 62 can toggle showing dice results in game options
		   isGame=true added to android manifest
		   saves default new game settings after a game is created
	Android 61 Bugs with Map updating fixed
		   Sending a saved game added to save game dialog
	Android 60 Cards dialog shows when the game has no cards to give
		   error reports now have an error Signature
	Android 59 fix for notifications not showing when game has & in name
		   fix for not being able to close the lobby when its in a disconnected state
	Android 58 allow any number of players to be selected for private games (minus AI)
		   fix for Dialog theme in lollipop
		   fix to show error when creating game with empty name
	Android 57 Can select colors for all players
		   Can load maps from external storage dir shown in About screen
		   Admins can rename games
	Android 56 Can view own cards at any point in the game.
		   fullscreen option added
	Android 55 updated to Turkish translation - Ekin Topuz
		   better error messages
	Android 54 Private games through Google Play Game Services added.
	Android 53 Capital achievements only given when game actually won - Amanda Lunn